[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Fonts/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/DialogBox/DialogBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Globals/Camera/Camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/HistoryMode/HistoryMode.gd" type="Script" id=4]
[ext_resource path="res://Assets/UI/Background/scene_dialog_1.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.933333, 0.317647, 0.156863, 1 )
corner_radius_top_left = 29
corner_radius_top_right = 29
corner_radius_bottom_right = 29
corner_radius_bottom_left = 29

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 1 )

[node name="HistoryMode" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Camera" parent="." instance=ExtResource( 3 )]

[node name="StartHistory" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1280.0
margin_bottom = -720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="StartHistory"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.831373, 0.764706, 0.839216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StartHistory"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.933333, 0.317647, 0.156863, 1 )
text = "Modo História
[ debug ]"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="history_start" type="Button" parent="StartHistory"]
anchor_left = 0.353125
anchor_top = 0.752778
anchor_right = 0.641406
anchor_bottom = 0.834722
margin_left = 458.0
margin_top = 540.0
margin_right = 827.0
margin_bottom = 599.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Iniciar [debug]"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Fala1" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1280.0
margin_right = 1280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Fala1"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog" parent="Fala1" instance=ExtResource( 2 )]
next_screen = "tutorial1"

[node name="TutorialPuzzle" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1280.0
margin_top = 720.0
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="TutorialPuzzle"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.831373, 0.764706, 0.839216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TutorialPuzzle"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.933333, 0.317647, 0.156863, 1 )
text = "Tela de tutorial sobre o
 minigame de quebra-cabeças."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GamePuzzle" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1280.0
margin_top = 1440.0
margin_right = 1280.0
margin_bottom = 1440.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GamePuzzle"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.831373, 0.764706, 0.839216, 1 )

[node name="Label" type="Label" parent="GamePuzzle"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.933333, 0.317647, 0.156863, 1 )
text = "Tela do jogo
quebra-cabeças
"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="GamePuzzle2" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2560.0
margin_top = 1440.0
margin_right = 2560.0
margin_bottom = 1440.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GamePuzzle2"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.831373, 0.764706, 0.839216, 1 )

[node name="Label" type="Label" parent="GamePuzzle2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.933333, 0.317647, 0.156863, 1 )
text = "Tela de parabenização
do jogo quebra-cabeças
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Fala2" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2560.0
margin_top = 720.0
margin_right = 2560.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog" parent="Fala2" instance=ExtResource( 2 )]
next_screen = "tutorial1"

[node name="GamePuzzle3" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3840.0
margin_top = 720.0
margin_right = 3840.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GamePuzzle3"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.831373, 0.764706, 0.839216, 1 )

[node name="Label" type="Label" parent="GamePuzzle3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.933333, 0.317647, 0.156863, 1 )
text = "Tela de tutorial para 
o minigame concerto
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="GamePuzzle4" type="Control" parent="."]
anchor_left = 3.0
anchor_top = 2.0
anchor_right = 4.0
anchor_bottom = 3.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="GamePuzzle4"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.831373, 0.764706, 0.839216, 1 )

[node name="Label" type="Label" parent="GamePuzzle4"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.933333, 0.317647, 0.156863, 1 )
text = "Tela do jogo
concerto
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="GamePuzzle5" type="Control" parent="."]
anchor_left = 3.0
anchor_top = 2.0
anchor_right = 4.0
anchor_bottom = 3.0
margin_top = 720.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="GamePuzzle5"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.831373, 0.764706, 0.839216, 1 )

[node name="Label" type="Label" parent="GamePuzzle5"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.933333, 0.317647, 0.156863, 1 )
text = "Tela de ranking 
e parabenização
do jogo concerto"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[connection signal="pressed" from="StartHistory/history_start" to="." method="_on_history_start_pressed"]
[connection signal="change_screen" from="Fala1/Dialog" to="." method="_on_change_screen"]
[connection signal="change_screen" from="Fala2/Dialog" to="." method="_on_change_screen"]
